Fixed bug where nav links were hidden by default on larger window.

--- a/W03/CoolPics/coolpics.css
+++ b/W03/CoolPics/coolpics.css
@@ -87,7 +87,7 @@ main p{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
     }
-    nav{
+    .hide{
         display: block;
         word-spacing: 100px;
     }
